[package]
name = "yu-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "yu_sdk"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["connect"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
